# THFFmpeg

./: .gitignore  CMakeLists.txt  README.md  init.lua  thffmpeg-1.0.alpha-0.rockspec  thffmpeg.c
generic/: thffmpeg.c
test/: test.lua  ucf101_icedancing.avi
